skeletons/sidecar-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: NAME
  namespace: default
spec:
  containers:
  - name: main
    image: nginx:1.27
    ports:
    - containerPort: 80
    volumeMounts:
    - name: shared
      mountPath: /shared
  volumes:
  - name: shared
    emptyDir: {}
